Fix: content > tutorial.css | main h1 code { z-index: 1 }

--- a/content/tutorial.css
+++ b/content/tutorial.css
@@ -91,6 +91,7 @@ main h1 code {
 	background-color: var(--color-h1-bg);
 	margin: 0 0.25em;
 	padding: 0;
+	z-index: 1;
 }
 
 main p, 
